examples: Update headers in ref example

--- a/examples/ref.html
+++ b/examples/ref.html
@@ -44,9 +44,9 @@
     </script>
   </head>
   <body>
-    <h1>Refs in Consonant service at <tt id="url"></tt></h1>
+    <h1>Ref "master" in Consonant service at <tt id="url"></tt></h1>
     <p class="note">Append <tt>?url=&langle;URL&rangle;</tt> to use the Consonant service at <tt>&langle;URL&rangle;</tt> instead of <tt>http://localhost:8989</tt>.</p>
-    <h2>Objects</h2>
+    <h2>Object</h2>
     <ul id="objects">
     </ul>
     <h2>JSON</h2>
