examples: Update existing examples to make title shorter

--- a/examples/ref.html
+++ b/examples/ref.html
@@ -42,7 +42,8 @@
     </script>
   </head>
   <body>
-    <h1>Ref "master" in Consonant service at <tt id="url"></tt></h1>
+    <h1>Ref "master"</h1>
+    <p class="service">Consonant service at <tt id="url"></tt></p>
     <p class="note">Append <tt>?url=&langle;URL&rangle;</tt> to use the Consonant service at <tt>&langle;URL&rangle;</tt> instead of <tt>http://localhost:8989</tt>.</p>
     <h2>Object</h2>
     <ul id="objects">
