--- a/examples/refs.html
+++ b/examples/refs.html
@@ -46,7 +46,8 @@
     </script>
   </head>
   <body>
-    <h1>Refs in Consonant service at <tt id="url"></tt></h1>
+    <h1>Refs</h1>
+    <p class="service">Consonant service at <tt id="url"></tt></p>
     <p class="note">Append <tt>?url=&langle;URL&rangle;</tt> to use the Consonant service at <tt>&langle;URL&rangle;</tt> instead of <tt>http://localhost:8989</tt>.</p>
     <h2>Objects</h2>
     <ul id="objects">
