--- a/examples/metadata.html
+++ b/examples/metadata.html
@@ -13,7 +13,7 @@
         }
 
         // connect to the service
-        var service = new Service(url);
+        var service = new consonant.Service(url);
 
         // display the service URL
         $('#url').text(service.url);
